--- a/spring-boot/pom.xml
+++ b/spring-boot/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>server</artifactId>
+	<artifactId>RealTimeFaceRecognition</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>server</name>
 	<description>Spring Boot Server</description>
