Updated Dockerfile to fix "mvnw not found" in Windows.
Added this command in the SpringBoot Dockerfile:
RUN sed -i 's/\r$//' mvnw && chmod +x mvnw

to ensure compatibility with windows CRLF line endings and fix the "mvnw not found problem".

--- a/spring-boot/Dockerfile
+++ b/spring-boot/Dockerfile
@@ -9,7 +9,7 @@ COPY spring-boot/.mvn .mvn
 COPY spring-boot/pom.xml .
 COPY spring-boot/src ./src
 
-RUN chmod +x mvnw
+RUN sed -i 's/\r$//' mvnw && chmod +x mvnw
 RUN ./mvnw package -DskipTests
 
 # Runtime
