--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -46,6 +46,7 @@ requests-oauthlib==2.0.0
 rsa==4.9
 scikit-learn==1.0.2
 scipy==1.4.1
+seaborn==0.11.2
 six==1.16.0
 tensorboard==2.11.2
 tensorboard-data-server==0.6.1
